fixed frontend wrapping and height

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -19,3 +19,9 @@ body {
   background: map-get($theme-colors, "dark");
   color: white;
 }
+
+#app {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
